--- a/PasswordManager/WebApplication/Views/Shared/Navbar.cshtml
+++ b/PasswordManager/WebApplication/Views/Shared/Navbar.cshtml
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-controller="Account" asp-action="Accounts">
-                    <img src="/Images/passmanager.svg" alt="" width="35" height="35" class="d-inline-block align-text-top">Password Manager
+                    <img src="/PasswordManager/Images/passmanager.svg" alt="" width="35" height="35" class="d-inline-block align-text-top">Password Manager
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
